--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.0.7",
+    "daisyui": "^2.46.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
